--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,9 @@
 {{#paper-toolbar as |toolbar|}}
    {{#toolbar.tools}}
      {{#paper-button}}
+     {{#link-to "trending" class="button"}}
        Home
+       {{/link-to}}
      {{/paper-button}}
      {{#paper-button}}
        Favourite
