--- a/app/templates/details.hbs
+++ b/app/templates/details.hbs
@@ -28,11 +28,13 @@
         <p>
         	Popularity: {{model.popularity}}
         </p>
+        <p>
+        Overview: {{model.overview}}
+        </p>
         {{/card.content}}
     {{/card.content}}    
         {{#card.actions class="layout-column"}}
           {{#paper-button}}Add to Favourites{{/paper-button}}
-        {{#paper-button}}Delete{{/paper-button}}
         {{/card.actions}}
     {{!-- {{/card.content}} --}}
 {{/paper-card}}
