--- a/app/templates/trending.hbs
+++ b/app/templates/trending.hbs
@@ -8,7 +8,7 @@
       
       {{#card.actions class="layout-row layout-align-start-center" as |actions|}}
         {{#actions.icons}}
-          {{#paper-button iconButton=true}}{{paper-icon 'favorite'}}{{/paper-button}}
+          {{#paper-button iconButton=true onClick=(action 'addToFavourites' trending)}}{{paper-icon 'favorite'}}{{/paper-button}}
           {{#paper-button iconButton=true}}{{paper-icon 'share'}}{{/paper-button}}
         {{/actions.icons}}
         
