--- a/app/templates/myfavourite.hbs
+++ b/app/templates/myfavourite.hbs
@@ -4,7 +4,7 @@
 {{#each model as |movie|}}
   {{#paper-card as |card|}}
 
-    <img {{action 'some_action' trending}}
+    <img {{action 'addToDetails' trending}}
       src="https://image.tmdb.org/t/p/w500/{{movie.poster_path}}"
       style="width:20vw; height:50vh" alt=""/>
     
